--- a/index.html
+++ b/index.html
@@ -391,19 +391,19 @@
 <tbody>
 	<tr>
 		<td>Java版 20w51a</td>
-		<td>v1.12-1230</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1230">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1230">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1230.zip">其它</a></td>
+		<td>v1.12-0102</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0102">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0102">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0102.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.16.2-1.16.4</td>
-		<td>v1.11.2-1230</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1230">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1230">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1230.zip">其它</a></td>
+		<td>v1.11.2-0102</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0102">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0102">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0102.zip">其它</a></td>
 	</tr>
-	<tr><td colspan="2"></td></tr>
+	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td>Java版 1.16-1.16.1</td>
 		<td>v1.11.1</td>
@@ -8998,6 +8998,7 @@
 	<img style="width:48%" src="items/screenshots/rituals.png" alt="仪式执行中" />
 	<figcaption>图 仪式执行中</figcaption>
 </figure>
+<figure>
 	<img style="width:48%" src="items/screenshots/helmet.png" alt="附有效果和属性附加的钻石头盔" />
 	<figcaption>图 附有效果和属性附加的钻石头盔</figcaption>
 </figure>
@@ -10116,7 +10117,7 @@
 <h3 id="竖纹方块">竖纹方块</h3>
 <p>部分方块双台阶材质修改为竖纹。</p>
 <figure>
-	<img style="height:160px" src="items/screenshots/vertical_blocks.png" alt="竖纹方块" /></p>
+	<img style="height:160px" src="items/screenshots/vertical_blocks.png" alt="竖纹方块" />
 	<figcaption>图 竖纹方块</figcaption>
 </figure>
 
@@ -10492,91 +10493,7 @@
 	<td>心急吃不了热饭菜</td>
 	<td>cpp:doh</td>
 </tr>
-
- </tbody></table>
-<!--
-<table style="border:1px solid #aaa;border-collapse:collapse;" align="left">
-	<thead style="border:1px solid #aaa;border-collapse:collapse;">
-		<tr><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:10%;">版本</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:90%;">变动</th></tr>
-	</thead>
-	<tbody style="border:1px solid #aaa;border-collapse:collapse;">
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了活塞回收花岗岩、闪长岩、安山岩以得到下界石英的配方。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在粘性活塞可以代替活塞参与回收。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.6</th><td style="border:1px solid #aaa;border-collapse:collapse;">不再支持使用粘性活塞回收。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.6.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以一次性回收64个安山岩、闪长岩、花岗岩，64个木炭。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了仍能使用粘性活塞回收的错误。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了多功能一体机，拥有三种压力、温度模式，以及很多种功能，可调节输出方向。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="3">1.8.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">修改多功能一体机存储经验量最高为48。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">为多功能一体机安装插件不会再打开机器了。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复多功能一体机被破坏后掉落的插件不正确的问题。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.8.2</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机高温低压模式下向上的输出错误。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="10">1.9</th><td style="border:1px solid #aaa;border-collapse:collapse;">配方中箱子替换为木桶。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">实际方块替换为木桶。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">被强充能时停止工作。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机高温低压模式下向上的输出错误。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以按左键切换模式和输出方向。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以输出到木桶。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">常温常压模式下可以繁殖竹子、甜浆果、花草。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整常温高压下部分产物几率和数量。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">移除多功能一体机常温高压下压缩功能。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整多功能一体机中常温高压模式下矿物粉的数量。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.9.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">常温常压下花草不再可以代替金合欢树苗生产金合欢木。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="6">1.9.5</th><td style="border:1px solid #aaa;border-collapse:collapse;">修改了机器的GUI。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在机器没有输出槽了。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">机器支持输出到大箱子。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">当输出的容器空间不足时，机器本身会高亮显示。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在机器输出支持发射器、投掷器和漏斗了。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">为多功能一体机添加了函数标签#cpp:all_in_one_machine。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.9.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了满箱时的错误行为。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修改了部分战利品表的调用。#cpp:all_in_one_machine。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.9.17</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机高压常温模式处理红石矿石和青金石矿石产物不正确的问题。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="6">1.10</th><td style="border:1px solid #aaa;border-collapse:collapse;">被破坏后会保留内部的经验值。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">可以至多存储100点经验值。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整了一些配方。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机常温常压模式下经验消耗不正确的问题。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机和生物投影仪经验条显示错误。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可使用 /scoreboard players set $allInOneMachinePeriod cppConfig [数值] 来设置多功能一体机工作周期，默认为1200。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">移除了黑曜石插件相关配方。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.3</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机常温低压模式下使用稀有掉落物酿造只会得到弹力药剂的问题。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.4</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在多功能一体机增殖羊毛树/矿石树/水果树产量翻倍。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.7</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了多功能一体机高温高压模式处理下界石英矿和绿宝石矿时没有输出的问题。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了成熟花草也可以在多功能一体机繁殖为金合欢的问题。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.10</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了紫色命之力转化得到的深色橡树树苗在多功能一体机繁殖出错的问题。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="3">1.11</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以处理下界金矿石了。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以处理远古残骸了。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整了一些配方。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.12</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以处理铜矿石了。</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整了一些配方。</td></tr>
-	</tbody>
-</table> 
-
-
-<table style="border:1px solid #aaa;border-collapse:collapse;" align="left">
-	<thead style="border:1px solid #aaa;border-collapse:collapse;">
-		<tr><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:20%;">物品</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:20%;">堆叠数</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:20%;">权重</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:20%;">品质</th></tr>
-	</thead>
-	<tbody style="border:1px solid #aaa;border-collapse:collapse;">
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">泥土之魂</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">2</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">火焰之星</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">2</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">山脉之肢</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">2</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">附魔金苹果</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">3/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">附魔铁锭</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">7/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">附魔金锭</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">7/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">肉松面包</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1-5</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">10/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">0</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">拔丝苹果</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1-5</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">10/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">0</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">煤炭</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1-5</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">12/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">-1</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">骨头</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1-9</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">12/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">-2</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">火药</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1-9</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">12/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">-2</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">腐肉</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1-9</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">12/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">-2</td></tr>
-		<tr><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">线</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">1-9</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">12/100</td><td style="border:1px solid #aaa;border-collapse:collapse;text-align: center;">-2</td></tr>
-	</tbody>
-</table>
-
-	 -->
-</div>
-
-
-
+</tbody></table>
 
 <footer>
 <p>
@@ -10591,7 +10508,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-12-30</p>
+<p>最后更新 2021-01-02</p>
 </footer>
 
 </article>
